# Job_Tracker

./: .gitignore  naukri_jobs.py  run_all.py
linkedln scrapper/: .env.example  .gitignore  README.md  check_cookies.py  check_detail_page.py  find_details_selector.py  import_cookies.py  inspect_html.py  login.py  pyproject.toml  raw_cookies.json
linkedln scrapper/Default/: Cookies  DIPS
linkedln scrapper/Default/Cache/Cache_Data/: 00af93bb30bb66e1_0  0868cecef2d659d8_0  091d89935190846d_0  0e397da35c056de3_0  1184c49a4c06db26_0  12f35360aec8dbb8_0  1ae7ac30595ef8c3_0  29b4fe7e46ae5301_0  2ae7abc59881dcbf_0  2cc3879fda0c45ca_0  2d56f5c1db030dc3_0  36413fec96a6bc53_0  36842d6b25eacf8d_0  36d78b06203596fb_0  40afcf9d6d2d9e6f_0  42dae33097d45b4a_0  4719fe8645c6a5b9_0  (+33 more)
linkedln scrapper/Default/DawnGraphiteCache/: data_1  index
linkedln scrapper/Default/DawnWebGPUCache/: data_1  index
linkedln scrapper/Default/GPUCache/: data_0  data_1  data_2  index
linkedln scrapper/Default/Session Storage/: LOG
linkedln scrapper/Default/WebStorage/: QuotaManager
linkedln scrapper/Default/shared_proto_db/: LOG
linkedln scrapper/config/: linkedin_searches.yaml  profile.yaml  settings.yaml
linkedln scrapper/config/selectors/: linkedin_jobs.yaml
linkedln scrapper/src/linkedln_scrapper/: __init__.py  main.py
linkedln scrapper/src/linkedln_scrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
linkedln scrapper/tests/integration/: test_csv_repository.py
linkedln scrapper/tests/unit/: test_normalizer.py  test_ranking.py
(+139 files in other folders)
